--- a/web/v2/ui/scripts/toggle.templ
+++ b/web/v2/ui/scripts/toggle.templ
@@ -38,3 +38,19 @@ script ToggleVerticalDrawer(elementTarget, btnIconTarget string) {
         elem.classList.add('hidden')
     }, 300)
 }
+
+script TogglePasswordVisibility(inputTarget, iconBtnTarget string) {
+    const input = document.querySelector(inputTarget)
+    const iconBtn = document.querySelector(iconBtnTarget)
+
+    if (input.type === 'password') {
+        input.type = 'text'
+        iconBtn.innerHTML = '<i data-feather="eye" class="h-5 w-5"></i>'
+	
+    } else {
+        input.type = 'password'
+        iconBtn.innerHTML = '<i data-feather="eye-off" class="h-5 w-5"></i>'
+    }
+
+    document.dispatchEvent(new CustomEvent('rebuild-icons'))
+}
