--- a/web/v2/ui/pages/invoices-print.templ
+++ b/web/v2/ui/pages/invoices-print.templ
@@ -6,12 +6,15 @@ import "github.com/cayo-rodrigues/nff/web/ui/forms"
 import "github.com/cayo-rodrigues/nff/web/ui/shared"
 
 templ InvoicesPrintPage(printingsList []*models.InvoicePrint, printingForForm *models.InvoicePrint, entities []*models.Entity) {
-	<div class="flex flex-col gap-4">
+	<div class="flex flex-col gap-3">
 		<div class="flex flex-col gap-2">
 			@forms.PrintInvoiceForm(printingForForm, entities)
 			@shared.ToggleElementVisibilityButton("#print-invoice-form")
 		</div>
-		<h2 class="text-base font-medium">Histórico de Operações</h2>
+		<div class="grid grid-cols-1 items-center 2xl:grid-cols-5">
+			<h2 class="col-span-3 text-base font-medium">Histórico de Operações</h2>
+			@shared.FiltersByDate("#printing-list", "/invoices/print/list")
+		</div>
 		@components.InvoicesPrintingsList(printingsList)
 	</div>
 }
