--- a/web/v2/ui/pages/invoices.templ
+++ b/web/v2/ui/pages/invoices.templ
@@ -6,7 +6,7 @@ import "github.com/cayo-rodrigues/nff/web/ui/components"
 import "github.com/cayo-rodrigues/nff/web/ui/forms"
 
 templ InvoicesPage(invoices []*models.Invoice) {
-	<div class="flex flex-col gap-4">
+	<div class="flex flex-col gap-3">
 		<div class="flex flex-col gap-2 sm:flex-row">
 			<a href="/invoices/create" hx-boost="true">
 				@shared.SuccessButton("sm") {
@@ -15,7 +15,10 @@ templ InvoicesPage(invoices []*models.Invoice) {
 				}
 			</a>
 		</div>
-		<h2 class="text-base font-medium">Histórico de Operações</h2>
+		<div class="grid grid-cols-1 items-center 2xl:grid-cols-5">
+			<h2 class="col-span-3 text-base font-medium">Histórico de Operações</h2>
+			@shared.FiltersByDate("#invoice-list", "/invoices/list")
+		</div>
 		@components.InvoiceList(invoices)
 	</div>
 }
