--- a/web/v2/ui/pages/metrics.templ
+++ b/web/v2/ui/pages/metrics.templ
@@ -6,12 +6,15 @@ import "github.com/cayo-rodrigues/nff/web/ui/shared"
 import "github.com/cayo-rodrigues/nff/web/ui/components"
 
 templ MetricsPage(metricsList []*models.Metrics, m *models.Metrics, entities []*models.Entity) {
-	<div class="flex flex-col gap-4">
+	<div class="flex flex-col gap-3">
 		<div class="flex flex-col gap-2">
 			@forms.MetricsForm(m, entities)
 			@shared.ToggleElementVisibilityButton("#metrics-form")
 		</div>
-		<h2 class="text-base font-medium">Histórico de Operações</h2>
+		<div class="grid grid-cols-1 items-center 2xl:grid-cols-5">
+			<h2 class="col-span-3 text-base font-medium">Histórico de Operações</h2>
+			@shared.FiltersByDate("#metrics-list", "/metrics/list")
+		</div>
 		@components.MetricsList(metricsList)
 	</div>
 }
