--- a/web/v2/ui/shared/filters.templ
+++ b/web/v2/ui/shared/filters.templ
@@ -5,28 +5,30 @@ import "github.com/cayo-rodrigues/nff/web/utils"
 import "time"
 
 templ FiltersByDate(listTarget string, endpoint string) {
-	<fieldset class="relative mt-2 w-full rounded border border-gray-300 text-center sm:text-start md:w-fit 2xl:col-span-2 2xl:mt-0 2xl:w-full">
-		<legend class="-left-4 top-2 rounded border border-gray-300 bg-gray-200 p-1 text-center md:absolute">
-			@IconSm("filter")
-		</legend>
-		<section class="grid w-full grid-cols-2 gap-2 px-2 py-2 pl-5 sm:grid-cols-5 md:w-fit 2xl:w-full">
-			@DateFilterOption(listTarget, endpoint, 30) {
-				Últimos 30 dias 
-			}
-			@DateFilterOption(listTarget, endpoint, 15) {
-				Últimos 15 dias 
-			}
-			@DateFilterOption(listTarget, endpoint, 7) {
-				Últimos 7 dias 
-			}
-			@DateFilterOption(listTarget, endpoint, 1) {
-				Ontem
-			}
-			@DateFilterOption(listTarget, endpoint, 0) {
-				Hoje
-			}
-		</section>
-	</fieldset>
+	<div class="relative mt-2 w-full md:w-fit 2xl:col-span-2 2xl:mt-0 2xl:w-full">
+		<fieldset class="rounded border border-gray-300 text-center sm:text-start">
+			<legend class="-left-4 top-2 rounded border border-gray-300 bg-gray-200 p-1 text-center md:absolute">
+				@IconSm("filter")
+			</legend>
+			<section class="grid w-full grid-cols-2 gap-2 px-2 py-2 pl-5 sm:grid-cols-5 md:w-fit 2xl:w-full">
+				@DateFilterOption(listTarget, endpoint, 30) {
+					Últimos 30 dias 
+				}
+				@DateFilterOption(listTarget, endpoint, 15) {
+					Últimos 15 dias 
+				}
+				@DateFilterOption(listTarget, endpoint, 7) {
+					Últimos 7 dias 
+				}
+				@DateFilterOption(listTarget, endpoint, 1) {
+					Ontem
+				}
+				@DateFilterOption(listTarget, endpoint, 0) {
+					Hoje
+				}
+			</section>
+		</fieldset>
+	</div>
 }
 
 templ DateFilterOption(listTarget string, endpoint string, daysRange int) {
