fix: minor styling issue

--- a/web/v2/ui/shared/filters.templ
+++ b/web/v2/ui/shared/filters.templ
@@ -5,8 +5,8 @@ import "github.com/cayo-rodrigues/nff/web/utils"
 import "time"
 
 templ FiltersByDate(listTarget string, endpoint string) {
-	<div class="relative mt-2 w-full md:w-fit 2xl:col-span-2 2xl:mt-0 2xl:w-full">
-		<fieldset class="rounded border border-gray-300 text-center sm:text-start">
+	<div class="mt-2 w-full md:w-fit 2xl:col-span-2 2xl:mt-0 2xl:w-full">
+		<fieldset class="relative rounded border border-gray-300 text-center sm:text-start">
 			<legend class="-left-4 top-2 rounded border border-gray-300 bg-gray-200 p-1 text-center md:absolute">
 				@IconSm("filter")
 			</legend>
