--- a/web/v2/ui/pages/metrics.templ
+++ b/web/v2/ui/pages/metrics.templ
@@ -5,14 +5,14 @@ import "github.com/cayo-rodrigues/nff/web/models"
 import "github.com/cayo-rodrigues/nff/web/ui/shared"
 import "github.com/cayo-rodrigues/nff/web/ui/components"
 
-templ MetricsPage(metricsList []*models.Metrics, m *models.Metrics, entities []*models.Entity) {
+templ MetricsPage(metricsList []map[string][]*models.Metrics, m *models.Metrics, entities []*models.Entity) {
 	<div class="flex flex-col gap-3">
 		<div class="flex flex-col gap-2">
 			@forms.MetricsForm(m, entities)
 			@shared.ToggleElementVisibilityButton("#metrics-form")
 		</div>
 		<div class="grid grid-cols-1 items-center 2xl:grid-cols-5">
-			<h2 class="col-span-3 text-base font-medium">Histórico de Operações</h2>
+			<h2 class="col-span-3 py-2 text-center text-base font-medium sm:py-3 md:py-0 md:text-left">Histórico de Operações (Métricas)</h2>
 			@shared.FiltersByDate("#metrics-list", "/metrics/list")
 		</div>
 		@components.MetricsList(metricsList)
