--- a/web/v2/ui/layouts/base.templ
+++ b/web/v2/ui/layouts/base.templ
@@ -17,7 +17,7 @@ templ Base(page templ.Component) {
 			<script src="/static/js/index.js"></script>
 			<title>NFF</title>
 		</head>
-		<body class="flex h-screen flex-col bg-gray-50 text-sm">
+		<body class="flex h-screen flex-col overflow-y-scroll bg-gray-50 text-sm">
 			<header>
 				@shared.Nav()
 			</header>
