--- a/web/v2/ui/pages/invoices-cancel.templ
+++ b/web/v2/ui/pages/invoices-cancel.templ
@@ -12,7 +12,7 @@ templ InvoicesCancelingsPage(cancelingsList []*models.InvoiceCancel, cancelingFo
 			@shared.ToggleElementVisibilityButton("#cancel-invoice-form")
 		</div>
 		<div class="grid grid-cols-1 items-center 2xl:grid-cols-5">
-			<h2 class="col-span-3 text-base font-medium">Histórico de Operações</h2>
+			<h2 class="col-span-3 text-base font-medium">Histórico de Operações (Cancelamentos)</h2>
 			@shared.FiltersByDate("#canceling-list", "/invoices/cancel/list")
 		</div>
 		@components.InvoicesCancelingsList(cancelingsList)
