--- a/web/v2/ui/layouts/base.templ
+++ b/web/v2/ui/layouts/base.templ
@@ -2,7 +2,7 @@ package layouts
 
 import "github.com/cayo-rodrigues/nff/web/ui/shared"
 
-templ Base(page templ.Component) {
+templ Base(page templ.Component, isAuthenticated bool) {
 	<!DOCTYPE html>
 	<html lang="pt-br">
 		<head>
@@ -19,7 +19,7 @@ templ Base(page templ.Component) {
 		</head>
 		<body class="flex h-screen flex-col overflow-y-scroll bg-gray-50 text-sm">
 			<header>
-				@shared.Nav()
+				@shared.Nav(isAuthenticated)
 			</header>
 			<main id="main" class="flex-1 px-4 pb-20 pt-4 sm:px-8 sm:py-6">
 				@page
