--- a/web/v2/ui/shared/nav.templ
+++ b/web/v2/ui/shared/nav.templ
@@ -7,7 +7,7 @@ templ Nav(isAuthenticated bool) {
 				Nota Fiscal Fácil
 			</a>
 		</h1>
-		<div class="flex items-center gap-4 sm:gap-6 xl:gap-8">
+		<div class="flex items-center gap-6 sm:gap-8">
 			@ListMenu(isAuthenticated)
 			@NotificationBell()
 			@BurgerMenu(isAuthenticated)
