--- a/web/v2/ui/forms/login.templ
+++ b/web/v2/ui/forms/login.templ
@@ -28,7 +28,7 @@ templ LoginForm(u *models.User) {
 			<sub class="min-h-3 break-words leading-3 text-red-500">{ u.Errors["Password"] }</sub>
 		</div>
 		<div class="mt-2">
-			@shared.SubmitButton("md") {
+			@shared.SubmitInfoButton("md") {
 				@shared.Icon("log-in")
 				<span>Entrar</span>
 			}
