--- a/web/v2/ui/layouts/base.templ
+++ b/web/v2/ui/layouts/base.templ
@@ -13,6 +13,7 @@ templ Base(page templ.Component, isAuthenticated bool) {
 			<link href="/static/css/custom.css" rel="stylesheet"/>
 			<script src="/static/js/3p/htmx.min.js"></script>
 			<script src="/static/js/3p/response-targets.js"></script>
+			<script src="/static/js/3p/sse.js"></script>
 			<script src="/static/js/3p/feather.min.js"></script>
 			<script src="/static/js/index.js"></script>
 			<title>NFF</title>
